--- a/package.json
+++ b/package.json
@@ -1,6 +1,9 @@
 {
   "name": "portafolio",
   "version": "0.1.0",
+  "engines": {
+    "node": "14.x"
+  },
   "private": true,
   "dependencies": {
     "@formspree/react": "^2.2.3",
